--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 /.idea/modules.xml
 /.idea/resnets-using-pytorch-from-scratch.iml
 /.idea/vcs.xml
+/demo.py
+/data/cifar-10-batches-py/batches.meta
+/data/cifar-10-batches-py/data_batch_1
+/data/cifar-10-batches-py/data_batch_2
+/data/cifar-10-batches-py/data_batch_3
+/data/cifar-10-batches-py/data_batch_4
+/data/cifar-10-batches-py/data_batch_5
+/data/cifar-10-batches-py/readme.html
+/data/cifar-10-batches-py/test_batch
+/data/cifar-10-python.tar.gz
