--- a/model_configs.yml
+++ b/model_configs.yml
@@ -5,15 +5,14 @@ load_data:
 train:
   arch_name: "resnet20"  # Select ResNet architecture one from ['resnet20', 'resnet32', 'resnet44', 'resnet56', 'resnet110', 'resnet1202']
   epochs: 200
-  start_epoch: 1  # Integer value from [1, epochs]
   batch_size: 128
   learning_rate: 0.1
   momentum: 0.9
-  weight_decay: 1e-4
+  weight_decay: 0.0001
   lr_scheduler_milestones: [100, 150]
 
 validate:
-  should_validate: True
+  should_validate: False
 
 save_model:
   saved_model_dir: './saved_models'
